# mcp-scanner-benchmark

./: .dockerignore  .gitignore  BACKEND_WALKTHROUGH.md  FRONTEND_WALKTHROUGH.md  README.md  docker-compose.yml  run_full_benchmark.sh
backend/: Dockerfile  main.py  pyproject.toml
backend/agent/: evaluator.py
backend/models/: common.py
backend/rules/: golden_repos.json  mcp_security.yaml  vulnerability_types.json
backend/scanners/: active_fuzzer.py  base.py  mcp_fortress.py  mcp_scan.py  mcp_shield.py  mcp_watch.py  ramparts.py  registry.py  semgrep_scan.py
backend/scanners/mcp_watch_tool/: package-lock.json
backend/scanners/mcp_watch_tool/src/: main.ts
backend/services/: github_service.py
backend/vulnerable_examples/: mcp.json  secrets.env  server.py
frontend/: next.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/report/: page.tsx
frontend/components/ui/: button.tsx  card.tsx
frontend/lib/: api.ts
scripts/: kickoff_all_golden.py  re-benchmark_golden.py  test_api_filtering.py  trigger_golden_scans.sh  verify_vulnerable_scan.py
