[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.20",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "mcp-scan>=0.3.36",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "semgrep>=1.85.0",
    "uvicorn>=0.40.0",
    "openai>=1.0.0",
    "mcp>=1.16.0",
]
